infra/k8s/k3s/manifests/33-svc-redis.yaml
# Redis Service
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: erechnung
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
