infra/k8s/k3s/manifests/71-svc-frontend.yaml
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: erechnung
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
